# rusty_api

./: Cargo.toml  README.md  megabits  test_file.txt  test_response_all_rockets.txt
src/: alt_main.rs  main.rs
