[package]
name = "rusty_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
structopt = "0.3.13"